; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_pio_read_2.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn.c_bwn_pio_read_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { i32 }
%struct.bwn_pio_txqueue = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.bwn_mac*, %struct.bwn_pio_txqueue*, i64)* @bwn_pio_read_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @bwn_pio_read_2(%struct.bwn_mac* %0, %struct.bwn_pio_txqueue* %1, i64 %2) #0 {
  %4 = alloca %struct.bwn_mac*, align 8
  %5 = alloca %struct.bwn_pio_txqueue*, align 8
  %6 = alloca i64, align 8
  store %struct.bwn_mac* %0, %struct.bwn_mac** %4, align 8
  store %struct.bwn_pio_txqueue* %1, %struct.bwn_pio_txqueue** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.bwn_mac*, %struct.bwn_mac** %4, align 8
  %8 = load %struct.bwn_pio_txqueue*, %struct.bwn_pio_txqueue** %5, align 8
  %9 = getelementptr inbounds %struct.bwn_pio_txqueue, %struct.bwn_pio_txqueue* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* %6, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i64 @BWN_READ_2(%struct.bwn_mac* %7, i64 %12)
  ret i64 %13
}

declare dso_local i64 @BWN_READ_2(%struct.bwn_mac*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
